welcome.lessons.welcome.methods.basics.Methods.scala.error
Methods:1: error: not found: type int
def goAndGet() {var c:int=0; while (!estSurBiscuit()) 
                      ^