welcome.lessons.welcome.methods.basics.Methods.scala.code
def goAndGet() {var c:int=0; while (!estSurBiscuit()) 
                {avance();c=c+1};prendBiscuit();recule(c)
}

for (i <- 1 to 7) {
    goAndGet();
    right();
    forward();
    left();
}